--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: #B4D5F9;
+  background: #b4d5f9;
   color: #fff;
 }
 .weather {
@@ -38,7 +38,8 @@ form {
 .container {
   display: none;
 }
-.enter, .invalid {
+.enter,
+.invalid {
   text-align: center;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   display: none;
@@ -48,15 +49,15 @@ form {
   margin: 10px 100px;
   transform: translateX(100%);
   animation: moveleft 0.5s linear forwards;
-
 }
- @keyframes moveleft {
-   100% {
+@keyframes moveleft {
+  100% {
     transform: translateX(0);
-   } 
   }
-.enter::after, .invalid::after {
-  content: '';
+}
+.enter::after,
+.invalid::after {
+  content: "";
   display: block;
   height: 5px; /* Height of the red background */
   background-color: red; /* Color of the background */
